--- a/By me/Solution.html
+++ b/By me/Solution.html
@@ -7,7 +7,7 @@
             body {
                 font-family: 'Calibri', 'Times New Roman';
                 padding: 40px;
-           }                     }
+           }                     
         </style>
     </head>
     <body>
@@ -26,3 +26,34 @@
         <h3>Section 2</h3>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h1>Welcome to My Website!</h1>
+<!-- Add an image of yourself that links to the about page -->
+<a href="./public/about.html"><img src="./assets/images/cat.png" alt="cat" /></a>
+<hr />
+
+<!-- Add a link to your contact me page here -->
+<a href="./public/contact.html">Contact Me</a>
